resources/tests/invalid_syntax/binary.ct
//Error: Expected a '\;'!
fn hello()->i32: 10 10 + 10 + 10 + 10;